tree-sitter-usfm3/grammar.js
    bookcode: $ => /\w{3}/,
     // bookcode: $ => choice("GEN", "EXO", "LEV", "NUM", "DEU", "JOS", "JDG",
     //          "RUT", "1SA", "2SA", "1KI", "2KI", 
     //          "1CH", "2CH", "EZR", "NEH", "EST", "JOB", "PSA", "PRO", 
     //          "ECC", "SNG", "ISA", "JER", "LAM", "EZK", "DAN", 
     //          "HOS", "JOL", "AMO", "OBA", "JON", "MIC", "NAM", "HAB", 
     //          "ZEP", "HAG", "ZEC", "MAL", "MAT", "MRK", "LUK", 
     //          "JHN", "ACT", "ROM", "1CO", "2CO", "GAL", "EPH", "PHP", 
     //          "COL", "1TH", "2TH", "1TI", "2TI", "TIT", "PHM", 
     //          "HEB", "JAS", "1PE", "2PE", "1JN", "2JN", "3JN", "JUD", 
     //          "REV", "TOB", "JDT", "ESG", "WIS", "SIR", "BAR", 
     //          "LJE", "S3Y", "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", 
     //          "1ES", "2ES", "MAN", "PS2", "ODA", "PSS", "EZA", 
     //          "5EZ", "6EZ", "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", 
     //          "1MQ", "2MQ", "3MQ", "REP", "4BA", "LAO", "FRT", 
     //          "BAK", "OTH", "INT", "CNC", "GLO", "TDX", "NDX", "TOB",
     //          "JDT", "ESG", "WIS", "SIR", "BAR", "LJE", "S3Y", 
     //          "SUS", "BEL", "1MA", "2MA", "3MA", "4MA", "1ES", "2ES", 
     //          "MAN", "PS2", "ODA", "PSS", "EZA", "5EZ", "6EZ", 
     //          "DAG", "PS3", "2BA", "LBA", "JUB", "ENO", "1MQ", "2MQ", 
     //          "3MQ", "REP", "4BA", "LAO", "FRT", "BAK", "OTH", 
     //          "INT", "CNC", "GLO", "TDX", "NDX", "XXA", "XXB", "XXC", 
     //          "XXD", "XXE", "XXF", "XXG"),
    text: $ => /[^\\\|]+/,
    _text: $ => /[^\\\|]+/,
    _spaceOrLine: $ => /[\s\n\r]/,

    // File Identification
    book: $ => $.id, //only at start of file
    description: $ => $._text,
    id: $ => prec.right(0, seq("\\id ", $.bookcode, optional($.description))),

    //numbered marker levels
    numberedLevelMax4: $ => token.immediate(/[1234]/),
    numberedLevelMax5: $ => token.immediate(/[12345]/),
    _headingText: $ => repeat1(choice($.text,
      $._characterMarker,
      $.ref,
      $.footnote,
      $.crossref,
      $.fig,
      )),


    verseText: $ => prec.right(0, repeat1(choice($.text,
      $._characterMarker, $.fig
      ))),
    v: $ => prec.right(0,seq("\\v ", $.verseNumber, repeat($._verseMeta))),
    verseNumber: $ => /\d+\w?(-\d+\w?)?[\s\n\r]*/,

    _verseMeta: $ => choice(
      $.va,
      $.vp,
    ),
    chapter: $ => prec.right(0,seq(
        optional($.cl),
        $.c,
        repeat($._chapterContent)
      )),
    c: $ => prec.right(0,seq("\\c ", $.chapterNumber, repeat($._chapterMeta))),
    chapterNumber: $ => /\d+/,

    // When vid is independent marker and not attribute in USFM
    _chapterContent: $ => choice(
      $._chapterMeta,
      $.title,
      $.paragraph,
      $._comments,
      $.poetry,
      $.table,
      $.list,
      $.footnote,
      $.pb,
      $.ip,
      $.iex,
      $.milestone,
      $.zNameSpace,
      $.esb,
      $.vid,
    ),

    //chapter meta
    _chapterMeta: $ => choice(
      $.ca,
      $.cp,
      $.cd,
      $.cl
    ),
    cd: $ => prec.right(0,seq("\\cd ", $._headingText)),

    // Titles & Headings
    title: $ => choice(
      $.msBlock,
      $.sBlock,
      $.sp,
      $.d,
      $.sdBlock,
      $.r,
      $.mteBlock,
      $.qa,
    ),

    sBlock: $ => prec.right(0, repeat1($.s)),
    s: $ => prec.right(0, seq($.sTag, $._headingText, repeat(choice($.sr, $.r)) )),
    sTag: $ => seq("\\s",optional($.numberedLevelMax5), " "),
    r: $ => prec.right(0, seq("\\r ", $._headingText)), // ocurs under c too

    paragraph: $ => choice(
      $.p,
      $.m,
      $.po,
      $.pr,
      $.cls,
      $.pmo,
      $.pm,
      $.pmc,
      $.pmr,
      $.piBlock,
      $.mi,
      $.nb,
      $.pc,
      $.phBlock,
      $.b,
    ),

    _paragraphContent: $ => choice(
      $.v,
      $._verseMeta,
      $.verseText,
      $.footnote, 
      $.crossref,
      $.milestone,
      $.zNameSpace,
      $._comments,
      $.ref,
    ),

    p: $ => prec.right(0, seq("\\p", $._spaceOrLine, repeat($._paragraphContent))),
    m: $ => prec.right(0, seq("\\m", $._spaceOrLine, repeat($._paragraphContent))),
    b: $ => seq("\\b", $._spaceOrLine),

    //quotes
    poetry: $ => prec.right(0, repeat1(choice(
      $.qBlock,
      $.qr,
      $.qc,
      // $.qs,
      // $.qa, //treated as a title
      // $.qac,
      $.qmBlock,
      $.qd,
    ))),

    _poetryContent: $ => choice(
      $._paragraphContent,
      $.qac,
      $.qs,
    ),

    qBlock: $ => prec.right(0, repeat1($.q)),
    q: $ => prec.right(0, seq($.qTag, repeat($._poetryContent))),
    qTag: $ => seq("\\q", optional($.numberedLevelMax4), $._spaceOrLine),
    caller: $ => /[^\s\\]+/,
    footnoteText: $ => prec.right(0, repeat1(choice($.text,
      $._nestedCharacterMarker,
      $._characterMarker,
      $.ref,
      $.fig,
      $.xt_standalone,
      $.xtNested,
      $.fv,
      ))),

    crossrefText: $ => prec.right(0, repeat1(choice($.text,
      $._nestedCharacterMarker,
      // $._characterMarker,
      $.ref,
      $.fig,
      ))),

    footnote: $ => choice($.f, $.fe, $.fm, $.ef),

    f: $ => seq("\\f ",$.caller, repeat($._footnoteContents), "\\f*"),
    fr: $ => prec.right(0, seq("\\fr ", optional($.footnoteText), optional("\\fr*"))),
    fq: $ => prec.right(0, seq("\\fq ", optional($.footnoteText), optional("\\fq*"))),
    fk: $ => prec.right(0, seq("\\fk ", optional($.footnoteText), optional("\\fk*"))),
    fw: $ => prec.right(0, seq("\\fw ", optional($.footnoteText), optional("\\fw*"))),
    ft: $ => prec.right(0, seq("\\ft ", optional($.footnoteText), optional("\\ft*"))),
    fdc: $ => prec.right(0, seq("\\fdc ", optional($.footnoteText), optional("\\fdc*"))),
    _footnoteContents: $ => choice(
      $.fr,
      $.fq,
      $.fqa,
      $.fk,
      $.fl,
      $.fw,
      $.fp,
      $.ft,
      $.fdc,
      $.footnoteText,
      $.cat
    ),

    //Cross-reference
    crossref: $ => choice($.x, 
      $.xt_standalone, //using this marker in introtext or cd will not mark it as a crossreference in parse tree
      // $.ex, 
      $.rq,
      ),

    x: $ => seq("\\x ", $.caller, repeat($._crossrefContents), "\\x*"),
    xo: $ => seq("\\xo ", optional($.crossrefText), optional("\\xo*")),
    xt: $ => seq("\\xt ", optional($.crossrefText),optional(choice($.defaultAttribute, $._attributesInCrossref)), 
      optional("\\xt*")),
    xt_standalone: $ => prec.right(0, seq("\\xt ", optional($.crossrefText),
      optional(choice($.defaultAttribute, $._attributesInCrossref)), 
      "\\xt*")),
    xta: $ => seq("\\xta ", optional($.crossrefText), optional("\\xta*")),
    xop: $ => seq("\\xop ", optional($.crossrefText), optional("\\xop*")),
    xdc: $ => seq("\\xdc ", optional($.crossrefText), optional("\\xdc*")),
    _crossrefContents: $ => choice(
      $.xo,
      $.xk,
      $.xq,
      $.xt,
      $.xta,
      $.xop,
      $.xot,
      $.xnt,
      $.xdc,
      $.cat,
    ),
    rq: $ => seq("\\rq ", $.text, "\\rq*"),

    //Character and word level markers
    // attributes: $ => seq("|", $.text), //to be implemented properly
    _characterMarker: $ => choice(
      $.add,
      $.bk,
      $.dc,
      $.k,
      $.nd,
      $.ord,
      $.pn,
      $.png,
      $.addpn,
      $.qt,
      $.sig,
      $.sls,
      $.tl,
      $.wj,
      $.em,
      $.bd,
      $.it,
      $.bdit,
      $.no,
      $.sc,
      $.sup,
      $.ndx,
      $.pro,
      $.rb,
      $.w,
      $.wg,
      $.wh,
      $.wa,
      $.wl,
      $.jmp,
      $.ta,
//      $.fig,
      // $.zNameSpace, makes all zNameSpaces part of paragraph content, like milestones
    ),

    _nestedCharacterMarker: $ => choice(
      $.addNested,
      $.bkNested,
      $.dcNested,
      $.kNested,
      $.ndNested,
      $.ordNested,
      $.pnNested,
      $.pngNested,
      $.addpnNested,
      $.qtNested,
      $.sigNested,
      $.slsNested,
      $.tlNested,
      $.wjNested,
      $.taNested,
      $.emNested,
      $.bdNested,
      $.itNested,
      $.bditNested,
      $.noNested,
      $.scNested,
      $.supNested,
      $.ndxNested,
      $.proNested,
      $.rbNested,
      $.wNested,
      $.wgNested,
      $.whNested,
      $.waNested,
      $.wlNested,
      $.jmpNested,
    ),

    category: $=> /[\w\d\s]+/,
    cat: $ => seq("\\cat", $.category, "\\cat*"),
      
    /* *****Attributes******** */

    /* For user defined attributes starting with x */

    attributeValue: $ =>  /[^\\\|"=]+/, //same rule as $.text, with quote and '=' added extra

    /* The default attribute is valid for any marker which normally provide attributes. 
      It would be extracted as default attribute without mentioning the corresponding attribute name */

    defaultAttribute: $ => seq("|", choice($.attributeValue,
      seq('"',$.attributeValue, '"'))),

    /* the special set of attributes valid for each of the normally 
      attributed elements are defined here*/

    // _wAttributes: $ => seq("|", $.lemmaAttribute),
    _attributesInCrossref: $ => prec.right(0,seq("|", repeat1(choice(
      $.linkAttribute, $.customAttribute, $.defaultAttribute))))
  }

});
